<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team_1_text">Team 1</string>
    <string name="team_2_text">Team 2</string>
    <string name="initial_count">0</string>
    <string name="plus_button_desc">Plus button</string>
    <string name="minus_button_desc">Minus button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>

</resources>