<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_team_1"
            android:text="@string/team_1_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/TeamText" />

        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/decreaseTeam1"
            style="@style/MinusButtons"
            android:onClick="decreaseScore"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_button_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_1"
            android:text="@string/initial_count"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/ScoreText" />

        <ImageButton
            android:id="@+id/increaseTeam1"
            style="@style/PlusButtons"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button_desc"
            android:onClick="increaseScore" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_team_2"
            android:text="@string/team_2_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/TeamText" />

        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/decreaseTeam2"
            style="@style/MinusButtons"
            android:onClick="decreaseScore"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_button_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_2"
            android:text="@string/initial_count"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/ScoreText" />

        <ImageButton
            android:id="@+id/increaseTeam2"
            style="@style/PlusButtons"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button_desc"
            android:onClick="increaseScore" />

    </RelativeLayout>

</LinearLayout>